update final code

--- a/profile.html
+++ b/profile.html
@@ -34,12 +34,12 @@
           }
   
           .wrapper {
-              background-color: #879CDF;
+              background-color: #DE9967;
               padding-top: 100px;
           }
   
           body {
-              background-image: url(Images/pink_back.jpeg);
+              background-image: url(Images/red_back.jpeg);
               -webkit-print-color-adjust: exact !important;
               font-family: 'Cabin', sans-serif;
           }
@@ -99,7 +99,7 @@
               display: flex;
               justify-content: center;
               flex-wrap: wrap;
-              background-color: #FF8374;
+              background-color: #870603;
            color: white;
               padding: 10px;
               width: 95%;
@@ -112,7 +112,7 @@
               border-radius: 50%;
               object-fit: cover;
               margin-top: -75px;
-              border: 6px solid #FEE24C;
+              border: 6px solid white;
               box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
           }
           
@@ -163,7 +163,7 @@
           .card {
               padding: 20px;
               border-radius: 6px;
-              background-color: #FF8374;
+              background-color: #870603;
              color: white;
               margin: 20px;
           }
