--- a/profile.html
+++ b/profile.html
@@ -34,12 +34,12 @@
           }
   
           .wrapper {
-              background-color: #5F64D3;
+              background-color: #E6E1C3;
               padding-top: 100px;
           }
   
           body {
-              background-image: url(Images/blue_back.jpeg);
+              background-image: url(Images/green_back.jpeg);
               -webkit-print-color-adjust: exact !important;
               font-family: 'Cabin', sans-serif;
           }
@@ -99,8 +99,8 @@
               display: flex;
               justify-content: center;
               flex-wrap: wrap;
-              background-color: #26175A;
-           color: white;
+              background-color: #C1C72C;
+           color: black;
               padding: 10px;
               width: 95%;
               border-radius: 6px;
@@ -112,7 +112,7 @@
               border-radius: 50%;
               object-fit: cover;
               margin-top: -75px;
-              border: 6px solid #73448C;
+              border: 6px solid #black;
               box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
           }
           
@@ -163,8 +163,8 @@
           .card {
               padding: 20px;
               border-radius: 6px;
-              background-color: #26175A;
-             color: white;
+              background-color: #C1C72C;
+             color: black;
               margin: 20px;
           }
   
